TEST_PROGRAMS/INVALID/shivan_sahib/jumbled_decls.min
var x: float;

x = 0.34;

var y: int;

